[package]
name = "stuff"
version = "0.1.0"
authors = ["David Barsky <me@davidbarsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.2"
tracing = "0.1.13"
tokio = { version = "0.2.13", features = ["full"], path = "../tokio/tokio" }
tracing-subscriber = "0.2.1"
tracing-futures = "0.2.3"
http = "0.2.0"
anyhow = "1.0.26"
tokio-test = { version = "0.2.0", path = "../tokio/tokio-test" }

[patch.crates-io]
tokio = { version = "0.2.13", features = ["full"], path = "../tokio/tokio" }
